@@ -6,7 +6,9 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.HashMap;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Transactional
 @Service
@@ -30,12 +32,14 @@ public class VideoGameService {
         return videoGame;
     }
 
-    public List<VideoGame> GetVideoGameByName(String name){
-        List <VideoGame> videoName = videoGameRepository.findAll().stream().filter(v -> name.equals(v.getName())).toList();
+    public HashMap<String, Double> GetPlatformSales() {
+        List<String> platforms = videoGameRepository.findAll().stream().filter(v -> v.getYear() >= 2013).map(w -> w.getPlatform()).distinct().collect(Collectors.toList());
+        HashMap<String, Double> globalSales = new HashMap<String, Double>();
+        for(String x: platforms){
+            Double totalSales = videoGameRepository.findAll().stream().filter(y -> y.getYear() >= 2013).filter(z -> z.getPlatform().equals(x)).map(a -> a.getGlobalsales()).reduce((double) 0, (e1, e2) ->e1 + e2);
+            globalSales.put(x, totalSales);
+        }
 
-        return videoName;
+        return globalSales;
     }
-
-
-
 }
